objects/Subscription_Aggregate_Migration__c/Subscription_Aggregate_Migration__c.object-meta.xml
<CustomObject>
    <description>Subscription Aggregate Migration</description>
    <label>Subscription Aggregate Migration</label>
    <nameField>
        <label>Aggregate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Aggregate Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>