objects/Subscription_Aggregate_Migration__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Subscription Aggregate Migrations</relationshipLabel>
    <relationshipName>Subscription_Aggregate_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>