objects/Subscription_Aggregate_Migration__c/fields/Core_Subscription_Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Core_Subscription_Allocation_Percent__c</fullName>
    <description>Core Subscription Allocation Percent</description>
    <label>Core Subscription Allocation Percent</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>