objects/Subscription_Aggregate_Migration__c/fields/Core_Subscription_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Core_Subscription_List_Price__c</fullName>
    <description>Core Subscription List Price</description>
    <label>Core Subscription List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>