objects/Subscription_Aggregate_Migration__c/fields/Core_Subscription_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Core_Subscription_Net_Price__c</fullName>
    <description>Core Subscription Net Price</description>
    <label>Core Subscription Net Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>