objects/Subscription_Aggregate_Migration__c/fields/Core_TaaS_Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Core_TaaS_Allocation_Percent__c</fullName>
    <description>Core TaaS Allocation Percent</description>
    <label>Core TaaS Allocation Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>