objects/Subscription_Aggregate_Migration__c/fields/Core_TaaS_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Core_TaaS_List_Price__c</fullName>
    <description>Core TaaS List Price</description>
    <label>Core TaaS List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>