objects/Subscription_Aggregate_Migration__c/fields/Core_TaaS_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Core_TaaS_Net_Price__c</fullName>
    <description>Core TaaS Net Price</description>
    <label>Core TaaS Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>