objects/Subscription_Aggregate_Migration__c/fields/EM_Subscription_Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>EM_Subscription_Allocation_Percent__c</fullName>
    <description>EM Subscription Allocation Percent</description>
    <label>EM Subscription Allocation Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>