objects/Subscription_Aggregate_Migration__c/fields/EM_Subscription_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>EM_Subscription_Net_Price__c</fullName>
    <description>EM Subscription Net Price</description>
    <label>EM Subscription Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>