objects/Subscription_Aggregate_Migration__c/fields/IR_Subscription_Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>IR_Subscription_Allocation_Percent__c</fullName>
    <description>IR Subscription Allocation Percent</description>
    <label>IR Subscription Allocation Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>