objects/Subscription_Aggregate_Migration__c/fields/IR_Subscription_List_Price__c.field-meta.xml
<CustomField>
    <fullName>IR_Subscription_List_Price__c</fullName>
    <description>IR Subscription List Price</description>
    <label>IR Subscription List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>