objects/Subscription_Aggregate_Migration__c/fields/IR_Subscription_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>IR_Subscription_Net_Price__c</fullName>
    <description>IR Subscription Net Price</description>
    <label>IR Subscription Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>