objects/Subscription_Aggregate_Migration__c/fields/IR_TaaS_Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>IR_TaaS_Allocation_Percent__c</fullName>
    <description>IR TaaS Allocation Percent</description>
    <label>IR TaaS Allocation Percent</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>