objects/Subscription_Aggregate_Migration__c/fields/IR_TaaS_List_Price__c.field-meta.xml
<CustomField>
    <fullName>IR_TaaS_List_Price__c</fullName>
    <description>IR TaaS List Price</description>
    <label>IR TaaS List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>