objects/Subscription_Aggregate_Migration__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <description>Net Price</description>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>