objects/Subscription_Aggregate_Migration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Aggregate Migrations</relationshipLabel>
    <relationshipName>Subscription_Aggregate_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>