objects/Subscription_Aggregate_Migration__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product Name</description>
    <formula>Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>