objects/Subscription_Aggregate_Migration__c/fields/RC_Subscription_Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>RC_Subscription_Allocation_Percent__c</fullName>
    <description>RC Subscription Allocation Percent</description>
    <label>RC Subscription Allocation Percent</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>