objects/Subscription_Aggregate_Migration__c/fields/RC_Subscription_List_Price__c.field-meta.xml
<CustomField>
    <fullName>RC_Subscription_List_Price__c</fullName>
    <description>RC Subscription List Price</description>
    <label>RC Subscription List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>