objects/Subscription_Aggregate_Migration__c/fields/RC_TaaS_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>RC_TaaS_Net_Price__c</fullName>
    <description>RC TaaS Net Price</description>
    <label>RC TaaS Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>