objects/Subscription_Aggregate_Migration__c/fields/SourceIds__c.field-meta.xml
<CustomField>
    <fullName>SourceIds__c</fullName>
    <description>SourceIds</description>
    <label>SourceIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>