objects/Subscription_Aggregate_Migration__c/listViews/Search_by_Contract_Number.listView-meta.xml
<ListView>
    <fullName>Search_by_Contract_Number</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Number__c</field>
        <operation>equals</operation>
        <value>00123595</value>
    </filters>
    <label>Search by Contract Number</label>
</ListView>